fix scrollbars showing on wrong div

--- a/public/global.css
+++ b/public/global.css
@@ -100,6 +100,8 @@ button:disabled {
 }
 
 /*
+https://justmarkup.com/articles/2015-07-31-dealing-with-long-words-in-css/
+https://stackoverflow.com/a/60550553/5016634
 https://css-tricks.com/almanac/properties/w/word-break/
 https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
 */
